Added BL.Models, BL for User

--- a/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
+++ b/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\AimHigh.PL\AimHigh.PL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
