--- a/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
+++ b/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>
+	      <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	  
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,12 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AimHigh.BL.Models\AimHigh.BL.Models.csproj" />
     <ProjectReference Include="..\AimHigh.BL\AimHigh.BL.csproj" />
     <ProjectReference Include="..\AimHigh.PL\AimHigh.PL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
