--- a/AimHighWebApp/AimHigh.API/appsettings.json
+++ b/AimHighWebApp/AimHigh.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection1": "Server=server-31590-300083357.database.windows.net;Database=dvdcentraldb;User ID=300083357db;Password=Test123!",
+    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
