--- a/AimHighWebApp/AimHigh.MigrationHandler/appsettings.json
+++ b/AimHighWebApp/AimHigh.MigrationHandler/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DatabaseConnection1": "Server=server-31590-300083357.database.windows.net;Database=dvdcentraldb;User ID=300083357db;Password=Test123!",
-    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GV.AimHigh.DB;Integrated Security=True"
+    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
