--- a/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
+++ b/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
@@ -11,7 +11,8 @@
 
   <ItemGroup>
 	    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3"/>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
+	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0-preview.6.24327.7" />
 
   </ItemGroup>
 
