--- a/AimHighWebApp/AimHigh.API/appsettings.json
+++ b/AimHighWebApp/AimHigh.API/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=server-31590-300083357.database.windows.net;Database=dvdcentraldb;User ID=300083357db;Password=Test123!",
-    "DatabaseConnection1": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True"
+    "RemoteDbConnection": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Persist Security Info=False;User ID=CloudSAd86944ec;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+   
+
+    "LocalDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
