added migration handler. changed nutget packages and connection strings

--- a/AimHighWebApp/AimHighMigrationHandler/appsettings.json
+++ b/AimHighWebApp/AimHighMigrationHandler/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RemoteDbConnection":"Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "DatabaseConnection": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
 
     //"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
