--- a/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
+++ b/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
@@ -5,9 +5,13 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<InvariantGlobalization>false</InvariantGlobalization>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<DocumentationFile>bin\Debug\net8.0\AimHigh.API.xml</DocumentationFile>
 	</PropertyGroup>
 
-  <ItemGroup>
+
+
+	<ItemGroup>
 	    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
 	    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
