api new hosted server

--- a/AimHighWebApp/AimHigh.API/appsettings.json
+++ b/AimHighWebApp/AimHigh.API/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "RemoteDbConnection":"Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "RemoteDbConnection": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";",
+
+    "LocalDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True",
+
+    "MonsterRemoteDb": "Server=db7118.public.databaseasp.net; Database=db7118; User Id=db7118; Password=At5?@Ee7g3B%; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
 
     //"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
