--- a/AimHighWebApp/AimHighMigrationHandler/appsettings.json
+++ b/AimHighWebApp/AimHighMigrationHandler/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "DatabaseConnection": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";",
+    "LocalDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AimHigh.DB;Integrated Security=True",
+    "MonsterRemoteDb": "Server=db7118.databaseasp.net; Database=db7118; User Id=db7118; Password=At5?@Ee7g3B%; Encrypt=False; MultipleActiveResultSets=True;"
+
 
     //"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:aimhighserver.database.windows.net,1433;Initial Catalog=AimHighdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
