--- a/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
+++ b/AimHighWebApp/AimHigh.API/AimHigh.API.csproj
@@ -12,6 +12,7 @@
 
 
 	<ItemGroup>
+	    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
 	    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
 	    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3" />
